<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<TextView android:id="@+id/scrambledWordLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scrambledWordLabel" android:textColor="#000" android:layout_span="2"
			android:gravity="right" android:paddingRight="50dp"></TextView>
		<TextView android:id="@+id/scrambledWordTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scrambledWordTextView" android:textColor="#000" android:layout_span="2"
			android:gravity="right" android:paddingRight="5dp"></TextView>
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/tableRow0"
	    android:layout_below="@+id/tableRow0"
	    android:layout_marginTop="17dp" >

	    <TextView
	        android:id="@+id/userGuessLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_span="2"
	        android:gravity="right"
	        android:paddingRight="5dp"
	        android:text="@string/userGuessLabel"
	        android:textColor="#000" />

	    <EditText
	        android:id="@+id/userGuessEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_span="1"
	        android:layout_weight="1"
	        android:inputType="text"
	        android:text="@string/userGuessEditText" />
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow3"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/tableRow1"
	    android:layout_below="@+id/tableRow1"
	    android:layout_marginTop="22dp" >

	    <TextView
	        android:id="@+id/levelLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingRight="5dp"
	        android:text="@string/levelLabel"
	        android:textColor="#000" />

	    <SeekBar
	        android:id="@+id/levelSeekBar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_span="2"
	        android:layout_weight="1"
	        android:inputType="numberDecimal"
	        android:max="4" />

	    <TextView
	        android:id="@+id/levelTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingRight="5dp"
	        android:text="@string/levelTextView"
	        android:textColor="#000" />
	</TableRow>

	<TableRow
	    android:id="@+id/tableRow2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/tableRow3"
	    android:layout_below="@+id/tableRow3"
	    android:layout_marginTop="14dp" >

		<TextView
		    android:id="@+id/scoreLabel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:paddingRight="40dp"
		    android:text="@string/scoreLabel"
		    android:textColor="#000" />

	    <TextView
	        android:id="@+id/score"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingRight="40dp"
	        android:text="@string/score"
	        android:textColor="#000" />

	    <TextView
	        android:id="@+id/timerLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingRight="40dp"
	        android:text="@string/timerLabel"
	        android:textColor="#000" />

	    <TextView
	        android:id="@+id/timer"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/timer"
	        android:textColor="#000" />
	</TableRow>

</RelativeLayout>
